syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
option csharp_namespace = "AdvantTestTask.Grpc";

package EmployeesGrpcPackage;

// The greeting service definition.
service Employees {
	rpc GetEmployees(google.protobuf.Empty) returns (GetEmployeeReply);
	rpc AddEmployee(EmployeeForCreation) returns (AddEmployeeReply);
	rpc DeleteEmployee(DeleteEmployeeRequest) returns (DeleteEmployeeReply);
	rpc UpdateEmployee(Employee) returns (UpdateEmployeeReply);
}

message UpdateEmployeeReply {
	bool succeed = 1;
}

message GetEmployeeReply {
	repeated Employee employees = 1;
}

message AddEmployeeReply {
	bool succeed = 1;
	Employee employee = 2;
}

message DeleteEmployeeRequest {
	int32 id = 1;
}

message DeleteEmployeeReply {
	bool succeed = 1;
}

enum Gender{
		none = 0;
		male = 1;
		famale = 2;
}

message Employee {
	int32 id = 1;
	string name = 2;
	string surname = 3;
	string patronymic = 4;
	google.protobuf.Timestamp birthdate = 5;
	Gender gender = 6;
	bool isHaveChild = 7;
}

message EmployeeForCreation {
	string name = 1;
	string surname = 2;
	string patronymic = 3;
	google.protobuf.Timestamp birthdate = 4;
	Gender gender = 5;
	bool isHaveChild = 6;
}
